Revision history for Mojo-SNMP

0.04
       * Add support for passing maxrepetitions to prepare()
       * Add add_custom_request_method() method

0.0301   Sat Sep  7 10:44:22 2013
       * Fix Makefile.PL
       * Fix t/basic.t
       * Change indentation to two spaces.

0.03     Mon Dec 10 20:11:23 2012
       * Add support for prepare($host, ..., walk => $oid);
       * Change "response" and "error" events also receive prepare() args.

0.0201   Thu Oct 25 21:20:42 2012
       * Need to ignore ./local

0.02     Thu Oct 18 00:07:55 2012
       * Add Joshua Keroes as author
       * Extended the documentation and fixed bugs

0.01     Wed Oct 17 23:38:47 2012
       * Add custom dispatcher
       * Add prepare()
       * Add wait()
       * Started project
